feat: message creation endpoint
