# backend/internal/controllers/topic.controller.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 
 	"github.com/Visoff/messanger/internal/services"
+	"github.com/Visoff/messanger/pkgs/dtos"
 	"github.com/Visoff/messanger/pkgs/handlers"
 )
 
@@ -13,7 +14,7 @@ type TopicController struct {
 	mux          *http.ServeMux
 }
 
-func NewTopicController(topicService *services.TopicService) *TopicController {
+func NewTopicController(topicService *services.TopicService, auth_service *services.AuthService) *TopicController {
 	c := &TopicController{
 		topicService: topicService,
 		mux:         nil,
@@ -28,7 +29,8 @@ func NewTopicController(topicService *services.TopicService) *TopicController {
 	mux.Handle("DELETE /{id}", handlers.Handler(c.DeleteTopic))
 	*/
 
-	mux.Handle("GET /{id}/messages", handlers.Handler(c.ListMessages))
+	mux.Handle("GET /{id}/messages", auth_service.ProtectRoute(handlers.Handler(c.ListMessages)))
+	mux.Handle("POST /{id}/messages", auth_service.ProtectRoute(handlers.Handler(c.CreateMessage)))
 
 	return c
 }
@@ -61,5 +63,37 @@ func (c *TopicController) ListMessages(w http.ResponseWriter, r *http.Request) e
 	}
 	w.WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode(messages)
+	return nil
+}
+
+// CreateMessage creates a new message in a topic.
+// @Summary      Create a new message in a topic
+// @Description  Creates a new message in a topic.
+// @Tags         messages
+// @Accept       json
+// @Produce      json
+// @Param        id path int true "Topic ID"
+// @Param        request body services.CreateMessageDTO true "Message details"
+// @Success      200  {object}  repository.Message
+// @Failure      400  {object}  httperrors.ErrorResponse
+// @Failure      401  {object}  httperrors.ErrorResponse
+// @Failure      500  {object}  httperrors.ErrorResponse
+// @Router       /topics/{id}/messages [post]
+// @Security     BearerAuth
+func (c *TopicController) CreateMessage(w http.ResponseWriter, r *http.Request) error {
+	topic_id, err := handlers.GetParamID(r, "id")
+	if err != nil {
+		return err
+	}
+	var dto services.CreateMessageDTO
+	if err := dtos.ParseFromBody(r, &dto); err != nil {
+		return err
+	}
+	msg, err := c.topicService.CreateMessage(r.Context(), topic_id, &dto)
+	if err != nil {
+		return err
+	}
+	w.WriteHeader(http.StatusOK)
+	json.NewEncoder(w).Encode(msg)
 	return nil
 }
